--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,20 @@
 
     <name>shoebill-common</name>
     <description>Shoebill Common Tool Library</description>
-    <url>https://github.com/Shoebill/shoebill-common</url>
+    <url>https://github.com/odegay/shoebill-common</url>
 
     <properties>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.1.51</kotlin.version>
+        <kotlin.version>1.2.71</kotlin.version>
         <dokka.version>0.9.15</dokka.version>
+        <github.global.server>github</github.global.server>
+        <github.maven-plugin>0.12</github.maven-plugin>
+        <localRep.url>file://d:/maven/repo/net/gtaun/</localRep.url>
     </properties>
 
     <distributionManagement>
-        <repository>
+<!--        <repository>
             <id>deployment</id>
             <name>Releases</name>
             <url>http://repo.sampx.ru/repository/maven-releases/</url>
@@ -26,16 +30,39 @@
             <id>deployment</id>
             <name>Snapshots</name>
             <url>http://repo.sampx.ru/repository/maven-snapshots/</url>
-        </snapshotRepository>
+        </snapshotRepository> -->
+        <repository>
+			<id>gtaun-local-repo1</id>
+			<name>GTAUN Local Repository1</name>
+			<url>${localRep.url}</url>
+		</repository>
     </distributionManagement>
 
     <repositories>
         <repository>
-            <id>gtaun-public-repo</id>
-            <name>GTAUN Public Repository</name>
-            <url>https://repo.sampx.ru/repository/maven-public/</url>
-        </repository>
-    </repositories>
+			<id>maven-central</id>
+			<name>Maven Central Repository1</name>
+			<url>http://central.maven.org/maven2/</url>
+		</repository>
+
+<!--		<repository>
+			<id>gtaun-local-repo1</id>
+			<name>GTAUN Local Repository1</name>
+			<url>${localRep.url}</url>
+		</repository>
+-->        
+
+        <repository>
+            <id>oxotarp-mvn-repo</id>
+            <url>https://raw.github.com/odegay/OxotaRP_Arts/mvn-repo/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>        
+
+    
+	</repositories>
 
     <pluginRepositories>
         <pluginRepository>
@@ -53,9 +80,9 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/Shoebill/shoebill-common</url>
-        <connection>scm:git:git://github.com/Shoebill/shoebill-common.git</connection>
-        <developerConnection>scm:git:git@github.com:Shoebill/shoebill-common.git</developerConnection>
+        <url>https://github.com/odegay/shoebill-common</url>
+        <connection>scm:git:git://github.com/odegay/shoebill-common.git</connection>
+        <developerConnection>scm:git:git@github.com:odegay/shoebill-common.git</developerConnection>
     </scm>
 
     <developers>
@@ -79,17 +106,35 @@
         </developer>
     </developers>
 
-    <ciManagement>
+    <!--<ciManagement>
         <system>teamcity</system>
         <url>http://ci.sampx.ru</url>
-    </ciManagement>
+    </ciManagement> -->
 
     <dependencies>
-        <dependency>
+    	<dependency>
             <groupId>net.gtaun</groupId>
             <artifactId>shoebill-api</artifactId>
             <version>2.0-RC</version>
         </dependency>
+    	<dependency>
+            <groupId>net.gtaun</groupId>
+            <artifactId>util-event</artifactId>
+            <version>2.0-RC</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+		
+        <dependency>
+            <groupId>net.gtaun</groupId>
+            <artifactId>shoebill-utilities</artifactId>
+            <version>2.0-RC</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -100,7 +145,7 @@
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jre8</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
 
@@ -121,12 +166,11 @@
     <build>
         <defaultGoal>clean install</defaultGoal>
 
-        <plugins>
+      <plugins>
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <version>${kotlin.version}</version>
-
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -135,13 +179,14 @@
                             <goal>compile</goal>
                         </goals>
                     </execution>
-                    <execution>
+<!--                    <execution>
                         <id>test-compile</id>
                         <phase>process-test-sources</phase>
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
                     </execution>
+-->                    
                 </executions>
 
                 <configuration>
@@ -152,7 +197,7 @@
                     <pluginOptions>
                         <option>all-open:annotation=net.gtaun.shoebill.common.AllOpen</option>
                     </pluginOptions>
-                </configuration>
+                </configuration> 
 
                 <dependencies>
                     <dependency>
@@ -168,8 +213,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <compilerArgument>-parameters</compilerArgument>
                 </configuration>
             </plugin>
@@ -190,7 +235,7 @@
                     <sourceLinks>
                         <link>
                             <dir>${project.basedir}/src/main/java</dir>
-                            <url>http://github.com/Shoebill/shoebill-api</url>
+                            <url>http://github.com/odegay/shoebill-api</url>
                         </link>
                     </sourceLinks>
                 </configuration>
@@ -209,7 +254,41 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>${github.maven-plugin}</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.version}</message>
+                    <merge>true</merge>
+                    <noJekyll>true</noJekyll>
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                    <branch>refs/heads/mvn-repo</branch>
+                    <includes><include>**/*</include></includes>
+                    <repositoryName>OxotaRP_Arts</repositoryName>
+                    <repositoryOwner>odegay</repositoryOwner>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>            
         </plugins>
+
+
     </build>
 
 </project>
