--- a/pom.xml
+++ b/pom.xml
@@ -21,21 +21,11 @@
     </properties>
 
     <distributionManagement>
-<!--        <repository>
+		<repository>
             <id>deployment</id>
             <name>Releases</name>
-            <url>http://repo.sampx.ru/repository/maven-releases/</url>
+            <url>http://35.206.126.225/artifactory/oxotarp_shoebill/</url>
         </repository>
-        <snapshotRepository>
-            <id>deployment</id>
-            <name>Snapshots</name>
-            <url>http://repo.sampx.ru/repository/maven-snapshots/</url>
-        </snapshotRepository> -->
-        <repository>
-			<id>gtaun-local-repo1</id>
-			<name>GTAUN Local Repository1</name>
-			<url>${localRep.url}</url>
-		</repository>
     </distributionManagement>
 
     <repositories>
@@ -44,24 +34,17 @@
 			<name>Maven Central Repository1</name>
 			<url>http://central.maven.org/maven2/</url>
 		</repository>
-
-<!--		<repository>
-			<id>gtaun-local-repo1</id>
-			<name>GTAUN Local Repository1</name>
-			<url>${localRep.url}</url>
-		</repository>
--->        
-
-        <repository>
-            <id>oxotarp-mvn-repo</id>
-            <url>https://raw.github.com/odegay/OxotaRP_Arts/mvn-repo/</url>
+		
+		<repository>
+            <id>oxotarp-shoebill</id>
+            <url>http://35.206.126.225/artifactory/oxotarp_shoebill/</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
             </snapshots>
-        </repository>        
+        </repository>                           		
 
-    
+   
 	</repositories>
 
     <pluginRepositories>
@@ -79,38 +62,7 @@
         </license>
     </licenses>
 
-    <scm>
-        <url>https://github.com/odegay/shoebill-common</url>
-        <connection>scm:git:git://github.com/odegay/shoebill-common.git</connection>
-        <developerConnection>scm:git:git@github.com:odegay/shoebill-common.git</developerConnection>
-    </scm>
-
-    <developers>
-        <developer>
-            <name>MK124</name>
-            <id>MK124</id>
-            <url>https://github.com/mk124</url>
-            <email>mk124a@gmail.com</email>
-            <organization>GTAUN</organization>
-            <organizationUrl>http://www.gtaun.net</organizationUrl>
-            <timezone>+8</timezone>
-        </developer>
-
-        <developer>
-            <name>123marvin123</name>
-            <id>123marvin123</id>
-            <url>https://github.com/123marvin123</url>
-            <email>catboy560@gmail.com</email>
-            <organization>GTAUN</organization>
-            <timezone>+1</timezone>
-        </developer>
-    </developers>
-
-    <!--<ciManagement>
-        <system>teamcity</system>
-        <url>http://ci.sampx.ru</url>
-    </ciManagement> -->
-
+   
     <dependencies>
     	<dependency>
             <groupId>net.gtaun</groupId>
@@ -258,37 +210,9 @@
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
-                <configuration>
-                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
-                </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <version>${github.maven-plugin}</version>
-                <configuration>
-                    <message>Maven artifacts for ${project.version}</message>
-                    <merge>true</merge>
-                    <noJekyll>true</noJekyll>
-                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-                    <branch>refs/heads/mvn-repo</branch>
-                    <includes><include>**/*</include></includes>
-                    <repositoryName>OxotaRP_Arts</repositoryName>
-                    <repositoryOwner>odegay</repositoryOwner>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
-                        <phase>deploy</phase>
-                    </execution>
-                </executions>
-            </plugin>            
+       
         </plugins>
-
-
     </build>
 
 </project>
